FIX: Prevent jump in reaction hover (#266)
* FIX: Prevent jump in reaction hover

* Update assets/stylesheets/common/common.scss

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -468,6 +468,8 @@ $float-height: 530px;
     .chat-message-reaction-list {
       position: relative;
       margin-top: 0.25em;
+      display: flex;
+      flex-wrap: wrap;
 
       .reaction-users-list {
         position: absolute;
@@ -483,7 +485,7 @@ $float-height: 530px;
       .chat-message-reaction {
         display: inline-flex;
         padding: 0.3em 0.6em;
-        margin: 1px 2px 1px 0;
+        margin: 1px 0.25em 1px 0;
         font-size: var(--font-down-2);
         border-radius: 4px;
         border: 1px solid var(--primary-low);
@@ -513,7 +515,7 @@ $float-height: 530px;
       }
       .chat-message-react-btn {
         vertical-align: top;
-        padding: 0.25em 0.5em;
+        padding: 0em 0.25em;
         background: none;
         border: none;
 
